# mpl-candy-machine

.github/: .env
.github/workflows/: build-programs.yml  deploy-program.yml  main.yml  test-js.yml  test-programs.yml
clients/js-solita-candy-guard/: .solitarc.js
clients/js-solita-candy-guard/idl/: candy_guard.json
clients/js-solita-candy-machine-core/: .solitarc.js
clients/js-solita-candy-machine-core/idl/: candy_machine_core.json
clients/js/src/hooked/: candyGuard.ts
configs/: shank.cjs  validator.cjs
idls/: candy_guard.json  candy_machine_core.json
programs/candy-guard/: Anchor.toml
programs/candy-guard/macro/: Cargo.toml
programs/candy-guard/program/: Cargo.toml
programs/candy-guard/program/src/: lib.rs
programs/candy-guard/program/src/guards/: gatekeeper.rs
programs/candy-machine-core/: Anchor.toml
programs/candy-machine-core/program/: Cargo.toml
programs/candy-machine-core/program/src/: lib.rs
programs/candy-machine-core/program/src/instructions/: mint_v2.rs
