[package]
name = "miraplex-candy-guard-derive"
version = "0.2.0"
edition = "2021"
description = "Procedural macro for automating the implementation of Miraplex Candy Guard. Derived/Forked from Metaplex."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/miracle-land/mpl-candy-guard"
license-file = "../../LICENSE"

[lib]
proc-macro = true
name = "mpl_candy_guard_derive"

[dependencies]
syn = { version = "1.0.98", features = ["extra-traits"] }
quote = "1.0.20"
