[package]
name = "miraplex-candy-guard"
version = "1.0.2"
description = "Metaplex Candy Guard: programmatic access control for Candy Machine."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-candy-machine"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_candy_guard"

[features]
no-entrypoint = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { package = "solarti-anchor-lang", version = "0.27.0" }
arrayref = "0.3.6"
mpl-candy-guard-derive = { package = "miraplex-candy-guard-derive", path = "../macro", version = "0.2.0" }
mpl-candy-machine-core = { package = "miraplex-candy-machine-core", path = "../../candy-machine-core/program", version = "1.0.4", features = ["cpi"] }
mpl-token-metadata = { package ="miraplex-token-metadata", version = "1.11.1", features = ["no-entrypoint"] }
mpl-token-auth-rules = { package = "miraplex-token-auth-rules", version = "1.3.2", features = ["no-entrypoint"] }
miraland-program = "=1.14.17-rc5"
spl-associated-token-account = { package = "solarti-associated-token-account", version = "1.1.6", features = ["no-entrypoint"] }
spl-token = { package = "solarti-token", version = "3.5.4", features = ["no-entrypoint"] }
miraland-gateway = "0.2.0"
